# MAI_OOP

./: CMakeLists.txt  Dockerfile  build_and_run.ps1  build_and_run.sh  main.cpp
Lab1/: CMakeLists.txt  Dockerfile  build_and_run.ps1  build_and_run.sh  main.cpp
Lab1/src/: CMakeLists.txt  UpdatedString.cpp  UpdatedString.h
Lab1/test/: CMakeLists.txt  test_class.cpp  test_lab.cpp
includes/: Figure.hpp  Point.hpp  Rectangle.hpp  Square.hpp  Trapezoid.hpp  Vector.hpp
includes/exceptions/: BadFigure.hpp
includes/implementations/: FourCalc.h  Vector.h
includes/interfaces/: IFour.h
src/: main.cpp  tempCodeRunnerFile.cpp
src/implementations/: FourCalc.cpp  Point.cpp  Rectangle.cpp  Square.cpp  Trapezoid.cpp  Vector.cpp
src/output/: main
test/: test_figure.cpp  test_lab_2.cpp  test_rectangle.cpp  test_square.cpp  test_trapezoid.cpp
